feat: add addContact, getContact endpoint, and add logic only send private messages if the recipient is already in the user's contacts
